# MobileRobots-2020-2-for-Covid19

./: .gitignore  README.md  SetupKinetic.sh  SetupMelodic.sh  frames.gv
Entregables/: cambio_valores_etiqueta_origin_faltan_parametros.xml  color_segmentation.py  project_final.py  project_voice.gram  proyectoFinal_Calvillo  robotino.urdf  robotino_modificado.urdf
Entregables/Entregable P2/: robotino.urdf
Entregables/Entregable P5/: indian_voice.m4a  voice_of_a_woman.m4a
Entregables/Entregable P6/: color_segmentation.py
Entregables/Entregable Proyecto Final/: INSTRUCCIONES Y LINK VIDEO.txt  PROYECTOFINAL.txt
Entregables/LIVP Practica 2/: robotino.urdf
Entregables/LIVP Práctica 4/: pocketsphinx_test.launch
Entregables/LIVP Práctica 6/: color_segmentation.py
Entregables/LIVP_Proyecto_final/: enlace & requisitos.txt  enlace_video.txt
Entregables/P2/: robotino.urdf
Entregables/P3/: dwa_local_planner_params.yaml
Entregables/P5/: P5 frases READ ME
Entregables/P6/: color_segmentation.py
Entregables/P6_CalvilloFelipeMiguel/: color_segmentation_modificado.py
Entregables/P_Final_archivos/: p_final.dic  p_final.gram  robotino_simul.launch
Entregables/Prac02/: robotino.urdf
Entregables/Practica 2/: robotino.urdf
Entregables/Practica 5/: kal_diphone.m4a  (+1 more)
Evaluaciones/: Proyecto.txt  Práctica1.txt  Práctica2.txt  Práctica3.txt  Práctica4.txt  Práctica5.txt  Práctica6.txt
Practicas_editables/: Practica02.odt
Slides/: .gitignore  EIR_2020_AtHomeEducation.tex
catkin_ws/: frames.gv
catkin_ws/src/hardware/mobile_base_simulator/: CMakeLists.txt
(+230 files in other folders)
